# web_scraping_positly

./: README.md
web_scraping-positly/: pyproject.toml  requirements.txt
web_scraping-positly/data/: known_urls.json  links.xlsx  universities.csv
web_scraping-positly/src/: cleaner.py  link_collector.py  main.py  scraper.py
