[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "web-scraping-positly"
version = "0.1.0"
description = "Web scraping project with Positly"
authors = [
    {name = "hudson_silverio", email = "hudsonpksj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.0",
    "lxml>=5.4.0",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "openpyxl (>=3.1.5,<4.0.0)",
    "selenium (>=4.41.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "ddgs (>=9.11.2,<10.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
